<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:camerakit="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/IP" />

                <EditText
                    android:id="@+id/ip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/IP"
                    android:inputType="textPersonName"
                    android:text="@string/defaultIP" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_port"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Port" />

                <EditText
                    android:id="@+id/port"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/Port"
                    android:inputType="textPersonName"
                    android:text="@string/defaultPort" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_ntpport"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/NTPPort" />

                <EditText
                    android:id="@+id/ntpport"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/NTPPort"
                    android:inputType="textPersonName"
                    android:text="@string/DefaeultNTPPort" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect" />

            <Button
                android:id="@+id/sync"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sync" />
        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/recording_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/startRecord" />

    <com.wonderkiln.camerakit.CameraView
        android:id="@+id/camera"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        camerakit:ckFacing="back"
        camerakit:ckFlash="off"
        camerakit:ckFocus="continuous"
        camerakit:ckVideoQuality="max1080p"
        camerakit:ckZoom="0" />

</LinearLayout>